--- a/paper-trading/pages/balance.html
+++ b/paper-trading/pages/balance.html
@@ -18,20 +18,21 @@
     />
     <script src="/scripts/hamburger.js" defer></script>
     <script src="/scripts/balance.js" defer></script>
-    <title>MockMarkets | Balance</title>
+    <title>Trading | Balance</title>
   </head>
 
   <body>
     <header>
       <div class="overlay"></div>
       <section class="container">
-        <h1><a href="../index.html">MockMarkets</a></h1>
+        <h1><a href="../index.html">Trading</a></h1>
         <button class="hamburger">
           <i class="fa-solid fa-bars hamburger"></i>
         </button>
       </section>
       <nav>
         <ul>
+          <li><a href="http://localhost:5173/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="../index.html">trade</a></li>
           <li><a href="#">balance</a></li>
