--- a/paper-trading/pages/crypto-details.html
+++ b/paper-trading/pages/crypto-details.html
@@ -19,19 +19,20 @@
     <script src="/scripts/crypto-detail.js" type="module" defer></script>
     <script src="/scripts/hamburger.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <title>MockMarkets | Crypto Details</title>
+    <title>Trading | Crypto Details</title>
   </head>
   <body>
     <header>
       <div class="overlay"></div>
       <section class="container">
-        <h1><a href="../index.html">MockMarkets</a></h1>
+        <h1><a href="../index.html">Trading</a></h1>
         <button class="hamburger">
           <i class="fa-solid fa-bars hamburger"></i>
         </button>
       </section>
       <nav>
         <ul>
+          <li><a href="http://localhost:5173/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="../index.html">trade</a></li>
           <li><a href="/pages/balance.html">balance</a></li>
