--- a/paper-trading/index.html
+++ b/paper-trading/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/index.css" />
     <script src="scripts/index.js" type="module" defer></script>
     <script src="scripts/hamburger.js" defer></script>
+    <!-- <link href="./dist/output.css" rel="stylesheet" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,24 +19,23 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Mock Markets</title>
+    <title>Trading</title>
   </head>
   <body>
     <header>
       <div class="overlay"></div>
       <section class="container">
-        <h1><a href="index.html">MockMarkets</a></h1>
+        <h1><a href="index.html">Trading</a></h1>
         <button class="hamburger">
           <i class="fa-solid fa-bars hamburger"></i>
         </button>
       </section>
       <nav>
         <ul>
+          <li><a href="http://localhost:5173/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="/index.html">trade</a></li>
           <li><a href="/pages/balance.html">balance</a></li>
-          <!-- <li><a href="#">notifications</a></li>
-          <li><a href="/pages/account.html">account</a></li> -->
         </ul>
       </nav>
     </header>
