--- a/paper-trading/pages/stock-calculator.html
+++ b/paper-trading/pages/stock-calculator.html
@@ -25,7 +25,7 @@
     <header>
       <div class="overlay"></div>
       <section class="container">
-        <h1><a href="../index.html">MockMarkets</a></h1>
+        <h1><a href="../index.html">Trading</a></h1>
         <button class="hamburger">
           <i class="fa-solid fa-bars hamburger"></i>
         </button>
@@ -35,6 +35,7 @@
           <li>
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
           </li>
+          <li><a href="http://localhost:5173/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="../index.html">trade</a></li>
           <li><a href="/pages/balance.html">balance</a></li>
