--- a/paper-trading/pages/watchlist.html
+++ b/paper-trading/pages/watchlist.html
@@ -21,20 +21,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Watchlist</title>
+    <title>Trading</title>
   </head>
 
   <body>
     <header>
       <div class="overlay"></div>
       <section class="container">
-        <h1><a href="../index.html">MockMarkets</a></h1>
+        <h1><a href="../index.html">Trading</a></h1>
         <button class="hamburger">
           <i class="fa-solid fa-bars hamburger"></i>
         </button>
       </section>
       <nav>
         <ul>
+          <li><a href="http://localhost:5173/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="../index.html">trade</a></li>
           <li><a href="/pages/balance.html">balance</a></li>
@@ -46,10 +47,10 @@
     <main>
       <div class="header">
         <h2 class="watchlist">Watchlist</h2>
-        <div class="delete">
+        <!-- <div class="delete">
           <p>Done</p>
           <i id="trash-icon" class="fa-solid fa-trash"></i>
-        </div>
+        </div> -->
       </div>
       <div class="table-container">
         <table>
