changes on home page

--- a/paper-trading/pages/balance.html
+++ b/paper-trading/pages/balance.html
@@ -48,10 +48,10 @@
           <legend>Add funds to your balance</legend>
           <div class="amount">
             <label for="amount">Amount</label>
-            <input type="number" id="amount" required placeholder="$100,000" />
+            <input type="number" id="amount" required placeholder="" />
           </div>
           <p>
-            MockMarkets account
+            Trading account
             <span class="current-balance">$123,456,789</span>
           </p>
           <button class="btn">Add funds to my balance</button>
