--- a/paper-trading/pages/stock-calculator.html
+++ b/paper-trading/pages/stock-calculator.html
@@ -35,7 +35,7 @@
           <li>
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
           </li>
-          <li><a href="http://localhost:5173/">Home</a></li>
+          <li><a href="https://go-cap.netlify.app/">Home</a></li>
           <li><a href="/pages/watchlist.html">watchlist</a></li>
           <li><a href="../index.html">trade</a></li>
           <li><a href="/pages/balance.html">balance</a></li>
